apps/games/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emulatorjs
  namespace: games
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emulatorjs
  template:
    metadata:
      labels:
        app: emulatorjs
    spec:
      containers:
        - name: emulatorjs
          image: lscr.io/linuxserver/emulatorjs:latest
          ports:
            - containerPort: 80
            - containerPort: 3000
          volumeMounts:
            - name: roms
              mountPath: /data
      volumes:
        - name: roms
          persistentVolumeClaim:
            claimName: games-roms-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: emulatorjs
  namespace: games
spec:
  type: NodePort
  selector:
    app: emulatorjs
  ports:
    - name: web
      port: 80
      targetPort: 80
      nodePort: 30800
    - name: mgmt
      port: 3000
      targetPort: 3000
      nodePort: 30801
